#2680 fixed alignment of logo

--- a/web/assets/css/responsive_css.css
+++ b/web/assets/css/responsive_css.css
@@ -2443,6 +2443,7 @@ box-shadow:         0px 1px 5px 0px rgba(50, 50, 50, 0.75);
 @media (min-width: 991px) {
     .old-page-container {
         padding: 0 !important;
+        margin: 0 auto;
     }
     #main_search {
         width: 43%;
